[package]
name = "diesel-connection"
version = "1.0.5"
edition = "2018"
description = "Static diesel r2d2 connection pooling."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Bajix/booter-rs/"
keywords = ["diesel","r2d2","postgres"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.7", features = ["r2d2"] }
once_cell = "1.8.0"
booter = "1.1.1"
inventory = "0.1.10"
diesel-tracing = { version = "0.1.5", optional = true }

[features]
default = ["postgres"]
tracing = ["diesel-tracing"]
mysql = ["diesel/mysql", "diesel-tracing/mysql"]
postgres = ["diesel/postgres", "diesel-tracing/postgres"]
sqlite = ["diesel/sqlite", "diesel-tracing/sqlite"]

