[package]
name = "diesel-connection"
version = "3.0.2"
edition = "2021"
description = "Static diesel r2d2 connection pooling."
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/Bajix/diesel-connection/"
keywords = ["diesel", "r2d2", "postgres"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
cfg_block = "0.1.1"
derive-diesel-connection = { "version" = "2.0.0", path = "../derive-diesel-connection" }
diesel = { version = "~2.0", features = ["r2d2"] }
dotenvy = { version = "0.15", optional = true }
env-url = "2.0.3"
static_init = "1.0.3"

[features]
default = ["postgres"]
# Enable automatic at-most-once dotenv loading via `dotenvy`.
dotenv = ["dotenvy"]
mysql = ["diesel/mysql"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
